crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_229_BMC_31in1_31_in_1_p1.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-229-BMC-31in1/31-in-1 [p1].nes
rom_sha256=6ded192ce45d4347629d70d92ae751ada8d58c21bd5d723100578bce12d1f687
frames=1141
fb_bytes=245760
cycles=33949782
audio_samples=836505
audio_fnv1a64=7da716836d57d8ec
checkpoint f900 fb_fnv1a64=2787fa426c0ba393
checkpoint f1100 fb_fnv1a64=2c4ab6116cb612da
