crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_231_BMC_20in1_20_in_1_p1.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-231-BMC-20in1/20-in-1 [p1][!].nes
rom_sha256=4a7bbe9fcab70a2c8e5359de07d98f9a0f6d08548b30a6b49598d916c52186eb
frames=1141
fb_bytes=245760
cycles=33949791
audio_samples=836505
audio_fnv1a64=66f6f1d32aaa14a6
checkpoint f900 fb_fnv1a64=1f2944611320118a
checkpoint f1100 fb_fnv1a64=1f2944611320118a
