crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_232_Camerica_Quattro_Pegasus_4_in_1_Unl_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-232-Camerica-Quattro/Pegasus 4-in-1 (Unl) [!].zip
rom_sha256=9c953d3bae8837a687f07f9c1486e1ac698c41b41483632b3a196adf403d1b1a
frames=1141
fb_bytes=245760
cycles=33949771
audio_samples=836505
audio_fnv1a64=9b347ca7ed24b247
checkpoint f900 fb_fnv1a64=200fb5c401a097a5
checkpoint f1100 fb_fnv1a64=200fb5c401a097a5
