crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_232_Camerica_Quattro_Quattro_Adventure_Camerica_b1_T_Pol_T_Island_Only_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-232-Camerica-Quattro/Quattro Adventure (Camerica) [b1][T+Pol(T.Island Only)].zip
rom_sha256=95172901a521104e62369bca193d71b326142ffd9d87f609a6292dce683214ea
frames=1141
fb_bytes=245760
cycles=33949805
audio_samples=836506
audio_fnv1a64=da3c45805c65bd49
checkpoint f900 fb_fnv1a64=1719dca5cef7a325
checkpoint f1100 fb_fnv1a64=a549da46d55ca6e5
