crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_232_Camerica_Quattro_Quattro_Adventure_USA_Unl_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-232-Camerica-Quattro/Quattro Adventure (USA) (Unl).zip
rom_sha256=060875d46993953926c4103878fc6549a26c6886976a2d4227ce6c8bc68fc7f6
frames=1141
fb_bytes=245760
cycles=33949805
audio_samples=836506
audio_fnv1a64=da3c45805c65bd49
checkpoint f900 fb_fnv1a64=1719dca5cef7a325
checkpoint f1100 fb_fnv1a64=a549da46d55ca6e5
